// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-77 css-1ps6pg7-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense makeStyles-titleRoot-82 css-1mk9mw3-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider makeStyles-title-85 css-1ih5jmd-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
    </ul>
    <div
      class="makeStyles-content-78 makeStyles-vertical-84"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-80 makeStyles-vertical-84 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-86 makeStyles-vertical-88 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-79"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-92 makeStyles-horizontal-94 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-1 css-1ps6pg7-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense makeStyles-titleRoot-6 css-1mk9mw3-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider makeStyles-title-9 css-1ih5jmd-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="makeStyles-content-2 makeStyles-horizontal-7"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-4 makeStyles-horizontal-7 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-10 makeStyles-vertical-12 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-3"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-16 makeStyles-horizontal-18 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-20 css-1ps6pg7-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense makeStyles-titleRoot-25 css-1mk9mw3-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider makeStyles-title-28 css-1ih5jmd-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="makeStyles-content-21 makeStyles-vertical-27"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-23 makeStyles-vertical-27 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-29 makeStyles-vertical-31 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-22"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-35 makeStyles-horizontal-37 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-96 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="makeStyles-content-97 makeStyles-vertical-103"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-99 makeStyles-vertical-103 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-105 makeStyles-vertical-107 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-98"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-111 makeStyles-horizontal-113 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-39 css-1ps6pg7-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense makeStyles-titleRoot-44 css-1mk9mw3-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider makeStyles-title-47 css-1ih5jmd-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap MuiListItemText-secondary css-tu5i67-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
    </ul>
    <div
      class="makeStyles-content-40 makeStyles-vertical-46"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-42 makeStyles-vertical-46 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-48 makeStyles-vertical-50 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-41"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-54 makeStyles-horizontal-56 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-58 css-1ps6pg7-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense makeStyles-titleRoot-63 css-1mk9mw3-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider makeStyles-title-66 css-1ih5jmd-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall css-1yybaem-MuiIcon-root"
          >
            view_carousel
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-noWrap MuiListItemText-primary css-yrxn77-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
    </ul>
    <div
      class="makeStyles-content-59 makeStyles-vertical-65"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-tabs-61 makeStyles-vertical-65 css-9mq7az-MuiPaper-root"
      >
        <ul
          class="MuiList-root MuiList-dense css-1mk9mw3-MuiList-root"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider MuiListItem-button makeStyles-root-67 makeStyles-vertical-69 css-1qkmnhx-MuiButtonBase-root-MuiListItem-root"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
              >
                dynamic_form
              </span>
            </div>
            <div
              class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </ul>
      </div>
      <div
        class="makeStyles-panels-60"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-73 makeStyles-horizontal-75 css-ee20y-MuiPaper-root"
          form="[object Object]"
          parent="[object Object]"
        >
          Test Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;
